# relayctl

./: AUTHORS  COPYING  Makefile  README.md  autogen.sh  configure.ac  relayctl.c
examples/: 60-relayctl.rules
src/: Makefile.am  relayctl.c
